--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
+      var loaderUrl = buildUrl + "/WebGLBuildNoCompression.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGLBuild.data.gz",
-        frameworkUrl: buildUrl + "/WebGLBuild.framework.js.gz",
-        codeUrl: buildUrl + "/WebGLBuild.wasm.gz",
+        dataUrl: buildUrl + "/WebGLBuildNoCompression.data",
+        frameworkUrl: buildUrl + "/WebGLBuildNoCompression.framework.js",
+        codeUrl: buildUrl + "/WebGLBuildNoCompression.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SanBingYouYong",
         productName: "CR-Gameplay",
